--- a/artwork.html
+++ b/artwork.html
@@ -12,7 +12,7 @@
         </nav>
         <h1>Artwork</h1>
     </header>
-     <section>
+     <section class="content-section">
      <p> I use my phone camera to document everyday living experiences. My work examines how lights, shades, and shapes interact and integrate, and how moods transmit and transform through it.
     </p>
  </section>
