--- a/artwork.html
+++ b/artwork.html
@@ -22,6 +22,12 @@
                 <h2>tranquilness</h2>
             <div class="gallery">
                 <img src="seattle.JPG" alt="colors: seattle">
+                 </div>
+                        </section>
+
+                <section class="content-section">
+                <h2>tranquilness</h2>
+            <div class="gallery">
                 <img src="moonriver.JPG" alt="shades: Anyuan">
                  </div>
                         </section>
