--- a/artwork.html
+++ b/artwork.html
@@ -20,13 +20,14 @@
 
         <section class="content-section">
                 <h2>tranquilness</h2>
+            <p>2022 in Seatle</p>
             <div class="gallery">
                 <img src="seattle.JPG" alt="colors: seattle">
                  </div>
                         </section>
 
                 <section class="content-section">
-                <h2>tranquilness</h2>
+                <p>2014 in England</p>
             <div class="gallery">
                 <img src="moonriver.JPG" alt="shades: Anyuan">
                  </div>
@@ -41,9 +42,15 @@
                         </section>
 
                 <section class="content-section">
-                <h2>life</h2>
+                <h2>2022 in New York</h2>
             <div class="gallery">
                 <img src="tulip.jpg" alt="colors: singapore">
+                 </div>
+                        </section>
+        
+                <section class="content-section">
+                <h2>2022 in New York</h2>
+            <div class="gallery">
                 <img src="rainbow.JPG" alt="colors: singapore">
         
                  </div>
