--- a/artwork.html
+++ b/artwork.html
@@ -100,23 +100,29 @@
                         </section>
 
                 <section class="content-section">
-                <h2>loneliness in the crowd</h2>
+                    <p>2024 in Istanbul</p>
+            <div class="gallery">
+                <img src="men.heic" alt="shade: the MET">
+                 </div>
+                        </section>
+        
+        <section class="content-section">
+                    <p>2023 in Barcelona</p>
             <div class="gallery">
                 <img src="motion.HEIC" alt="shade: the MET">
-                <img src="men.heic" alt="shade: the MET">
                  </div>
                         </section>
 
         
         <section class="content-section">
-                <h2>hope</h2>
+                   <p>2018 in New York</p>
             <div class="gallery">
                 <img src="light.JPG" alt="colors: singapore">
                  </div>
                         </section>
 
                 <section class="content-section">
-                <h2>hope</h2>
+                    <p>2024 in New York</p>
             <div class="gallery">
                 <img src="met shades.JPG" alt="colors: tulip">
                  </div>
