--- a/artwork.html
+++ b/artwork.html
@@ -20,6 +20,10 @@
 
         <section class="content-section">
              <h>Photography</h>
+                        </section>
+        
+        <section class="content-section">
+         
             <div class="gallery">
                 <img src="seattle.JPG" alt="colors: seattle">
                  </div>
