--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             
          <h3>Other Research Areas</h3>
            <p>
-             Previously, I have worked on language teaching pedagogy and Second Language Acquisition.
+             Previously, I have worked on language pedagogy and Second Language Acquisition.
             </p>
             
  <p>Feel free to email me to discuss more about my work.  </p>
