--- a/artwork.html
+++ b/artwork.html
@@ -13,7 +13,7 @@
         <h1>Artwork</h1>
     </header>
      <section class="content-section">
-     <p> I use my phone camera to document everyday living experiences. My work examines how lights, shades, and shapes interact and integrate, and how moods transmit and transform through it.
+     <p> I use my phone camera to document everyday living experiences. My work examines how lights, shades, and shapes interact and integrate, and how moods transmit and transform through them.
     </p>
  </section>
     <main>
