--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <main>
         <section id="about" class="content-section">
             <p>
-              Hi, I'm a second-year PhD student in linguistics at <a href="https://arts-sciences.buffalo.edu/linguistics.html">University at Buffalo</a> and a member of the fieldwork group at UB.
-                Prior to UB, I obtained my bachelor's degree in Teaching Chinese to Speakers of Other Languages from <a href="https://en.bfsu.edu.cn"> Beijing Foreign Studies University</a> and my master's degree in East Asian Languages and Cultures from <a href="http://ealac.columbia.edu"> Columbia University</a>.
-                I work on morphosyntax, pragmatics, and language documentation and I cook and paint for fun.
+              Hi, I'm a second-year PhD student in linguistics at <a href="https://arts-sciences.buffalo.edu/linguistics.html">University at Buffalo</a> and a member of the fieldwork group at UB. 
+                I obtained my bachelor's degree in Teaching Chinese to Speakers of Other Languages from <a href="https://en.bfsu.edu.cn"> Beijing Foreign Studies University</a> and my master's degree in East Asian Languages and Cultures from <a href="http://ealac.columbia.edu"> Columbia University</a>.
+                I work on morphosyntax, pragmatics, and language documentation, and I cook and paint for fun.
                 Here is my <a href="/me/CV_JZ_20240918.pdf" target="_blank">CV</a>. 
             </p>
         </section>
@@ -46,7 +46,7 @@
              </p>
 
                      <h3>Discourse Pragmatics</h3>
-            <p> My work in this area centers around how interlocutors highlight focal informstion in discourse. Languages being investigated include different Chinese dialects, Yucatec Maya, and Bimoba.
+            <p> My work in this area centers around how interlocutors highlight focal information in discourse. Languages being investigated include different Chinese dialects, Yucatec Maya, and Bimoba.
              </p>
 
         
