--- a/index.html
+++ b/index.html
@@ -45,22 +45,26 @@
              I am interested in how complex compounding provides a lens for understanding the boundary between morphology and syntax. I have developed an HPSG analysis of the internal structure of dish names across languages under the supervision of <a href="https://www.jeanpierrekoenig.com" target="_blank">Dr. Jean-Pierre Koenig</a>.
              </p>
 
-                     <h3>Discourse Pragmatics</h3>
+                     <h3>Pragmatics</h3>
             <p> My work in this area centers around how interlocutors highlight focal information in discourse. Languages being investigated include different Chinese dialects, Yucatec Maya, and Bimoba.
              </p>
 
         
-        <h3>Emotion, Odor, and Language</h3>
+        <h3>Emotion and Language</h3>
                          <p>
-             Recently, I have been wondering how emotions and odors as experience-based constructs are produced and reproduced by language cross-culturally. 
+             Recently, I have been thinking how emotions as experience-based constructs shape and are shaped by language use cross-culturally. 
                              To what extent are languages infused with emotions? How are the lingusitic expressions of emotions related to the speaker or the event agent?
                              For example, are the affective suffixes attested in Quechua and Aymara (South Bolivian varieties) subject-oriented, speaker-oriented, or neither?
-                             How do human conceptualize their experiences with odors and what role does language play in such sociocognitive process? 
-                          </p>
+             </p>
 
               <h3>Language Documentation</h3>
                          <p>
-             I was born and raised in <a href="https://en.wikipedia.org/wiki/Anyuan_County" target="_blank">Anyuan</a>, China, and I speak Anyuan Hakka, a lesser-studied variety of the Hakka language. Since 2021, I have initiated an ongoing Hakka documenttaion project, in which I collaborate with local community members to document, analyze, preserve, and promote the language.
+             I was born and raised in <a href="https://en.wikipedia.org/wiki/Anyuan_County" target="_blank">Anyuan</a>, China, and I speak Anyuan Hakka, a lesser-studied variety of the Hakka language. 
+                             Since 2021, I have initiated an ongoing Hakka documenttaion project, in which I collaborate with local community members to document, analyze, preserve, and promote the language. 
+                             For example, in 2024 I have developed an introductory course of general lingusitics and taught it in Anyuan Hakka to a group of community members who have no prior lingusitics background. 
+                             The course provided easy access to linguistic knowledge for local community memebers who do not speak English (or Mandarin) and equipped them with basic lingusitic tools to better understand Anyuan Hakka, their own everyday language. 
+            I also run an Anyuan Hakka online chatting group with young generations from Anyuan. 
+                             The chatting group meets biweekly online, which creates a vibrant space for people who are from Anyuan but have (im)migrated to other places for study or work to continiously speak Anyuan Hakka and maintain their proficiency.
                           </p>
             
          <h3>Other Research Areas</h3>
