--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <li><a href="#research">Research</a></li>
                 <li><a href="#teaching">Teaching</a></li>
                  <li><a href="#service">Service</a></li>
-                <li><a href="#lingwork">Linguistics Work</a></li>
+                <li><a href="#lingwork">Lingwork</a></li>
                 <li><a href="artwork.html">Artwork</a></li> <!-- Correct link to the artwork page -->
             </ul>
         </nav>
@@ -31,18 +31,20 @@
     <main>
         <section id="about" class="content-section">
             <p>
-              Hi, I'm a second-year PhD student in linguistics at <a href="https://arts-sciences.buffalo.edu/linguistics.html">University at Buffalo</a> and a member of the fieldwork group at UB. 
-                I obtained my bachelor's degree in Teaching Chinese to Speakers of Other Languages from <a href="https://en.bfsu.edu.cn"> Beijing Foreign Studies University</a> and my master's degree in East Asian Languages and Cultures from <a href="http://ealac.columbia.edu"> Columbia University</a>.
-                I work on morphosyntax, pragmatics, and language documentation, and I cook and paint for fun.
+              I'm a second-year PhD student in linguistics at <a href="https://arts-sciences.buffalo.edu/linguistics.html">University at Buffalo</a>, advised by <a href="https://www.jeanpierrekoenig.com" target="_blank">Jean-Pierre Koenig</a>.
+                I'm also a member of the fieldwork group at UB. 
+                I obtained my BA in Teaching Chinese to Speakers of Other Languages from <a href="https://en.bfsu.edu.cn"> Beijing Foreign Studies University</a> and my MA in East Asian Languages and Cultures from <a href="http://ealac.columbia.edu"> Columbia University</a>.
+                My research interests center around morphosyntax, discourse pragmatics, and language documentation. Languages I have worked on include Hakka, Balti, Bimoba, Fulani, Quechua, and Aymara. 
+                Outside of linguistics, I cook and paint, and photograph for fun.
                 Here is my <a href="/me/CV_JZ_20240918.pdf" target="_blank">CV</a>. 
             </p>
         </section>
 
         <section id="research" class="content-section">
             <h2>Research</h2>
-         <h3>Complex Compounding</h3>
+         <h3>Complex Compound</h3>
             <p>
-             I am interested in how complex compounding provides a lens for understanding the boundary between morphology and syntax. I have developed an HPSG analysis of the internal structure of dish names across languages under the supervision of <a href="https://www.jeanpierrekoenig.com" target="_blank">Dr. Jean-Pierre Koenig</a>.
+             Complex compounds (compounds consisting of three or more members) provide a lens for understanding the boundary between morphology and syntax. What is a word? What is a phrase? When we form words out of multiple words, what is the limit? My current project investigates the structure of complex compound nouns using Mandarcin dish names dataset. 
              </p>
 
                      <h3>Information Structure</h3>
@@ -50,10 +52,10 @@
              </p>
 
         
-        <h3>Language and Emotion</h3>
+        <h3>Emotionality</h3>
                          <p>
-             Recently, I have been thinking how emotions as experience-based constructs shape and are shaped by language use cross-culturally. 
-                             To what extent are languages infused with emotions? How are the lingusitic expressions of emotions related to the speaker or the event agent?
+             Recently, I have been thinking how emotions, feelings, affections, or sentiments, shape and are shaped by language use cross-culturally.
+                             How are emotionality expressed across-lingusitically? How do the lingusitic expressions of emotionality related to the interlocutors' experience, knowledge, and attention?
                              For example, are the affective suffixes attested in Quechua and Aymara (South Bolivian varieties) subject-oriented, speaker-oriented, or something else?
              </p>
 
