--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 I'm also a member of the fieldwork group at UB. 
                 I obtained my BA in Teaching Chinese to Speakers of Other Languages from <a href="https://en.bfsu.edu.cn"> Beijing Foreign Studies University</a> and my MA in East Asian Languages and Cultures from <a href="http://ealac.columbia.edu"> Columbia University</a>.
                 My research interests center around morphosyntax, discourse pragmatics, and language documentation. Languages I have worked on include Hakka, Balti, Bimoba, Fulani, Quechua, and Aymara. 
-                Outside of linguistics, I cook and paint, and photograph for fun.
+                Outside of linguistics, I cook, paint, and photograph for fun.
                 Here is my <a href="/me/CV_JZ_20240918.pdf" target="_blank">CV</a>. 
             </p>
         </section>
