--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h2>Research</h2>
          <h3>Complex Compound</h3>
             <p>
-             Complex compounds (compounds consisting of three or more members) provide a lens for understanding the boundary between morphology and syntax. What is a word? What is a phrase? When we form words out of multiple words, where is the limit? My current project investigates the structure of complex compound nouns using Mandarcin dish names dataset.
+             Complex compounds (compounds consisting of three or more members) provide a lens for understanding the boundary between morphology and syntax. What is a word? What is a phrase? When we form words out of multiple words, where is the limit? My current project investigates the structure of complex compound nouns using a Mandarin dish name dataset.
              </p>
 
                      <h3>Information Structure</h3>
@@ -60,7 +60,7 @@
              </p>
 
               <h3>Language Documentation</h3>
-            <h5>Anyuan Hakka</h5>
+            <h6>Anyuan Hakka</h6>
                          <p>
              I was born and raised in <a href="https://en.wikipedia.org/wiki/Anyuan_County" target="_blank">Anyuan</a>, China, and I speak Anyuan Hakka, a lesser-studied variety of the Hakka language. 
                              Since 2021, I have initiated an ongoing Hakka documenttaion project, in which I collaborate with local community members to document, analyze, preserve, and promote the language. 
