--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                  </section>
 
           <section id="lingwork" class="content-section">
-            <h2>Lingusitics Work</h2>
+            <h2>Linguistics Work</h2>
          <p> Zhong, J. Anyuan Hakka: An IPA illustration. (in prep.) </p>
           <p> Zhong, J. Chinese demonstrative gāi: A linguistic investigation and its pedagogical implications. The 5th International Forum on Linguistics and Chinese Education (IFOLCE-5), 4-7 October 2019, New York, United States. </p>
          <p> Zhong, J. A task-based program for teaching English to children of migrant workers in Beijing. The 8th International Conference on Task-Based Language Teaching. 19-21 August 2019, Ottawa, Canada. </p>        
