--- a/artwork.html
+++ b/artwork.html
@@ -13,7 +13,7 @@
         <h1>Artwork</h1>
     </header>
             <section class="content-section">
-     <p> My artwork examines how lights, shades, and shapes interact and integrate, and how moods transmit and transform through them.
+     <p> My artwork examines how lights, shades, and shapes interact and integrate, through which moods transmit and transform.
     </p>
  </section>
     <main>
