--- a/fieldwork.html
+++ b/fieldwork.html
@@ -14,17 +14,19 @@
         <h1>Fieldwork</h1>
     </header>
             <section class="content-section">
-     <p> See my fieldwork notes here.
+     <h2>Anyuan</h2>
     </p>
+                
  </section>
     <main>
+             <h3>Anyuan in flashback</h3>
           <section class="content-section">
          
             <div class="gallery">
-                <img src="seattle.JPG" alt="colors: seattle">
+                <img src="九龙山.HEIC" alt="colors: 九龙山">
                  </div> 
                           <div class="gallery">
-                <img src="moonriver.JPG" alt="shades: Anyuan">
+                <img src="猪膏花.HEIC" alt="shades: 猪膏花">
                  </div>
         </main>
 
