--- a/fieldwork.html
+++ b/fieldwork.html
@@ -15,10 +15,10 @@
     </header>
     
     <main>        
-            <section class="content-section">
+                     </section>
      <h2>Anyuan in flashback (2023) </h2>
                 
-          <section class="content-section">        
+                     </section>    
 
 
               <div class="gallery">
