--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <li><a href="#research">Research</a></li>
                 <li><a href="#teaching">Teaching</a></li>
                  <li><a href="#service">Service</a></li>
-                <li><a href="#lingwork">Lingwork</a></li>
+                <li><a href="fieldwork.html">Fieldwork</a></li>
                 <li><a href="artwork.html">Artwork</a></li> <!-- Correct link to the artwork page -->
             </ul>
         </nav>
