--- a/index.html
+++ b/index.html
@@ -31,11 +31,10 @@
     <main>
         <section id="about" class="content-section">
             <p>
-              I'm a second-year PhD student in linguistics at <a href="https://arts-sciences.buffalo.edu/linguistics.html">University at Buffalo</a>, advised by <a href="https://www.jeanpierrekoenig.com" target="_blank">Jean-Pierre Koenig</a>.
-                I'm also a member of the fieldwork group at UB. 
-                I obtained my BA in Teaching Chinese to Speakers of Other Languages from <a href="https://en.bfsu.edu.cn"> Beijing Foreign Studies University</a> and my MA in East Asian Languages and Cultures from <a href="http://ealac.columbia.edu"> Columbia University</a>.
+                I'm a third-year PhD student in linguistics at <a href="https://arts-sciences.buffalo.edu/linguistics.html">University at Buffalo</a>, advised by <a href="https://www.jeanpierrekoenig.com" target="_blank">Jean-Pierre Koenig</a>.
+                I'm also a member of UB fieldwork group and <a href="https://buffaloling.wordpress.com">UB GramLab</a>.               
                 My research interests center around morphosyntax, discourse pragmatics, and language documentation. Languages I have worked on include Hakka, Balti, Bimoba, Quechua, and Aymara. 
-                Outside of linguistics, I cook, paint, and photograph for fun.
+                I obtained my BA in Teaching Chinese to Speakers of Other Languages from <a href="https://en.bfsu.edu.cn"> Beijing Foreign Studies University</a> and my MA in East Asian Languages and Cultures from <a href="http://ealac.columbia.edu"> Columbia University</a>.
                 Here is my <a href="/me/CV_JZ_20240918.pdf" target="_blank">CV</a>. 
             </p>
         </section>
@@ -102,8 +101,10 @@
                  </section>
 
           <section id="lingwork" class="content-section">
-            <h2>Linguistics Work</h2>
+            <h2>Selected Work</h2>
          <p> Zhong, J. Anyuan Hakka: An IPA illustration. (in prep.) </p>
+           <p>    Akobundu, U., Baiz, J., Camacho-Rios, G., Lin, X., Silvestre-Cruz, N., Spies, S., Townes, G., & Zhong, J. Complex Consonant Clusters in the Morphotactics of Southern Bolivian Aymara Verbs. Second Annual Meeting of Phonetics/Phonology in Upstate New York (PHUNY 2), 3 May 2025, Buffalo, United States. </p>
+            <p>     Zhong, J. Nominal compounding: A comparative analysis of South Bolivian Quechua and Tarma Quechua. Sociedad Científica de estudiantes de la Carrera de Lingüística e Idiomas, UMSA. 10 January 2025, La Paz, Bolivia.</p>
           <p> Zhong, J. Chinese demonstrative gāi: A linguistic investigation and its pedagogical implications. The 5th International Forum on Linguistics and Chinese Education (IFOLCE-5), 4-7 October 2019, New York, United States. </p>
          <p> Zhong, J. A task-based program for teaching English to children of migrant workers in Beijing. The 8th International Conference on Task-Based Language Teaching. 19-21 August 2019, Ottawa, Canada. </p>        
          <p> Hu, L. & Zhong, J. Discovering the strategies for written corrective feedback in Chinese language teaching: Insights from 3rd year CIB program. The 2019 Annual Conference of the Chinese Language Teachers Association (CLTA), 5-7 April 2019, Seattle, United States. </p>
