--- a/fieldwork.html
+++ b/fieldwork.html
@@ -107,7 +107,12 @@
         <p> coming soon
         </p>
     </section>
-
+ 
+    <section class="content-section">
+        <p> Feel free to email me to discuss more about my work. </p>
+        <p> juanzhon AT buffalo DOT edu </p> 
+    </section>
+    
 </main>
     <footer>
         <p>© 2025 Juan Zhong</p>
