--- a/artwork.html
+++ b/artwork.html
@@ -119,7 +119,7 @@
      
         <section class="content-section">
         <p> Feel free to email me to discuss more about my work. </p>
-        <p> juanzhon AT buffalo DOT edu </p>
+        <p> juanzhong88 AT gmail DOT com </p>
         </section>
 
     </main>
