--- a/fieldwork.html
+++ b/fieldwork.html
@@ -14,25 +14,22 @@
  
     <section class="content-section"> 
         <h2>Anyuan Hakka</h2>    
-        <p> 
-            I was born and raised in <a href="https://en.wikipedia.org/wiki/Anyuan_County" target="_blank">Anyuan</a>, China, and I speak Anyuan Hakka, a lesser-studied variety of the Hakka language. Since 2021, I have initiated an ongoing documenttaion project, in which I collaborate with local community members to document, analyze, preserve, and promote Anyuan Hakka. In 2024, I developed an introductory course of general lingusitics and taught it in Anyuan Hakka to a group of community members who have no prior lingusitics background. The course provided easy access to linguistic knowledge for local community memebers who do not speak English (or Mandarin) and equipped them with basic lingusitic tools to better understand Anyuan Hakka, their own everyday language.   
-        </p>
+        <p> Born and raised in <a href="https://en.wikipedia.org/wiki/Anyuan_County" target="_blank">Anyuan</a>, China, I speak Anyuan Hakka, a lesser-studied variety of the Hakka language. Since 2021, I have initiated an ongoing documenttaion project, in which I collaborate with local community members to document, analyze, preserve, and promote Anyuan Hakka. </p>
+        <p> In 2024, I developed an introductory course of general lingusitics and taught it in Anyuan Hakka to a group of community members who have no prior lingusitics background. The course provided easy access to linguistic knowledge for local community memebers who do not speak English (or Mandarin) and equipped them with basic lingusitic tools to better understand Anyuan Hakka, their own everyday language. </p>     
+        <p>  I also run an online Anyuan Hakka chatting group with young generations from Anyuan. The chatting group meets online every week, aiming at creating a vibrant space for people who are from Anyuan but have (im)migrated to other places to continiously speak Anyuan Hakka and maintain their proficiency. 
     </section>
    
     <section class="content-section">    
         <h3>Anyuan Hakka chatting group 安远话复健
         </h3>                            
-        <p>
-            I also run an online Anyuan Hakka chatting group with young generations from Anyuan. The chatting group meets weekly online, which creates a vibrant space for people who are from Anyuan but have (im)migrated to other places for study or work to continiously speak Anyuan Hakka and maintain their proficiency. Here is our <a href="webcal://p54-caldav.icloud.com/published/2/MTEzODIwMDE0NDExMzgyMMFgVCDCDaKoMtNCKBn1EheKigZyTRdvEtjhZMh7Eqob2s4rlRIdiR-kIIeOP9PGp8uaH3PMuEmiKg6pgtuKLqE" target="_blank">2025 calender</a>.              
+        <p> Here is our <a href="webcal://p54-caldav.icloud.com/published/2/MTEzODIwMDE0NDExMzgyMMFgVCDCDaKoMtNCKBn1EheKigZyTRdvEtjhZMh7Eqob2s4rlRIdiR-kIIeOP9PGp8uaH3PMuEmiKg6pgtuKLqE" target="_blank">2025 calender</a>.              
         </p>  
     </section>   
   
     <section class="content-section">        
-            <h3>Speaking Anyuan Hakka 安远话入门十讲</h3>
-            <p>        
-                coming soon
-            </p>  
-    </section>                       
+        <h3>Speaking Anyuan Hakka 安远话入门十讲</h3>
+        <p> coming soon </p>  
+    </section>                 
 
     <section class="content-section">        
         <h3>Anyuan in flashback 县城印象
