--- a/index.html
+++ b/index.html
@@ -30,12 +30,11 @@
 
     <main>
         <section id="about" class="content-section">
-            <p>
-                I'm a third-year PhD student in linguistics at <a href="https://arts-sciences.buffalo.edu/linguistics.html">University at Buffalo</a>, advised by <a href="https://www.jeanpierrekoenig.com" target="_blank">Jean-Pierre Koenig</a>.
-                I'm also a member of UB fieldwork group and <a href="https://buffaloling.wordpress.com">UB GramLab</a>.               
-                My research interests center around morphosyntax, discourse pragmatics, and language documentation. Languages I have worked on include Hakka, Balti, Bimoba, Quechua, and Aymara. 
-                I obtained my BA in Teaching Chinese to Speakers of Other Languages from <a href="https://en.bfsu.edu.cn"> Beijing Foreign Studies University</a> and my MA in East Asian Languages and Cultures from <a href="http://ealac.columbia.edu"> Columbia University</a>.
-                Here is my <a href="/me/cv_jz_20250914.pdf" target="_blank">CV</a>. 
+            <p> I'm a third-year PhD student in linguistics at <a href="https://arts-sciences.buffalo.edu/linguistics.html">University at Buffalo</a>, advised by <a href="https://www.jeanpierrekoenig.com" target="_blank">Jean-Pierre Koenig</a>. I'm also a member of UB fieldwork group and <a href="https://buffaloling.wordpress.com">UB GramLab</a>.               
+            </p>
+            <p> My research interests center around morphosyntax, pragmatics, and typology. Languages I have conducted fieldwork on include Hakka, Balti, Bimoba, Quechua, and Aymara.     
+            </p>       
+            <p> I obtained my BA in Teaching Chinese to Speakers of Other Languages from <a href="https://en.bfsu.edu.cn"> Beijing Foreign Studies University</a> and my MA in East Asian Languages and Cultures from <a href="http://ealac.columbia.edu"> Columbia University</a>. Here is my <a href="/me/cv_jz_20250914.pdf" target="_blank">CV</a>. 
             </p>
         </section>
 
@@ -55,11 +54,11 @@
             </p>
 
             <h3>Language Documentation</h3>
-            <p> Born and raised in <a href="https://en.wikipedia.org/wiki/Anyuan_County" target="_blank">Anyuan</a>, China, I speak Anyuan Hakka, a lesser-studied variety of the Hakka language. Since 2021, I have initiated an ongoing Hakka documenttaion project (AYHAK), in which I collaborate with local community members to document, analyze, preserve, and promote the language. See more detials about my AYHAK project <a href="fieldwork.html">here</a>.
+            <p> Born and raised in <a href="https://en.wikipedia.org/wiki/Anyuan_County" target="_blank">Anyuan</a>, China, I speak Anyuan Hakka, a lesser-studied variety of the Hakka language. Since 2021, I have initiated an ongoing Hakka documenttaion project (AYHAK), in which I collaborate with local community members to document, analyze, preserve, and promote the language. Click <a href="fieldwork.html">here</a> to for more detials about my AYHAK project.
             </p>
             
             <h3>Other Areas</h3>
-            <p> Previously, I worked on language pedagogy and second language acquisition.
+            <p> Previously, I worked on second language acquisition and language pedagogy.
             </p>
         </section>
 
@@ -94,7 +93,7 @@
             <p> Zhong, J. A task-based program for teaching English to children of migrant workers in Beijing. The 8th International Conference on Task-Based Language Teaching. 19-21 August 2019, Ottawa, Canada. </p>        
             <p> Hu, L. & Zhong, J. Discovering the strategies for written corrective feedback in Chinese language teaching: Insights from 3rd year CIB program. The 2019 Annual Conference of the Chinese Language Teachers Association (CLTA), 5-7 April 2019, Seattle, United States. </p>
                           
-            <p>Feel free to email me to discuss more about my work.  </p>
+            <p>Feel free to email me to discuss more about my work. </p>
         </section>
 
 
