--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </p>
 
             <h3>Language Documentation</h3>
-            <p> Born and raised in <a href="https://en.wikipedia.org/wiki/Anyuan_County" target="_blank">Anyuan</a>, China, I speak Anyuan Hakka, a lesser-studied variety of the Hakka language. Since 2021, I have initiated an ongoing Hakka documenttaion project (AYHAK), in which I collaborate with local community members to document, analyze, preserve, and promote the language. Click <a href="fieldwork.html">here</a> to for more detials about my AYHAK project.
+            <p> Born and raised in <a href="https://en.wikipedia.org/wiki/Anyuan_County" target="_blank">Anyuan</a>, China, I speak Anyuan Hakka, a lesser-studied variety of the Hakka language. Since 2021, I have initiated an ongoing Hakka documenttaion project (AYHAK), in which I collaborate with local community members to document, analyze, preserve, and promote the language. Click <a href="fieldwork.html">here</a> for more detials about my AYHAK project.
             </p>
             
             <h3>Other Areas</h3>
