--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <h2>Selected Work</h2>
             <p> Zhong, J. Anyuan Hakka: An IPA illustration. (in prep.) </p>
             <p> Akobundu, U., Baiz, J., Camacho-Rios, G., Lin, X., Silvestre-Cruz, N., Spies, S., Townes, G., & Zhong, J. Complex Consonant Clusters in the Morphotactics of Southern Bolivian Aymara Verbs. Second Annual Meeting of Phonetics/Phonology in Upstate New York (PHUNY 2), 3 May 2025, Buffalo, United States. </p>
-            <p> Zhong, J. Nominal compounding: A comparative analysis of South Bolivian Quechua and Tarma Quechua. Sociedad Científica de estudiantes de la Carrera de Lingüística e Idiomas, UMSA. 10 January 2025, La Paz, Bolivia.</p>
+            <p> Zhong, J. Nominal compounding: A comparative analysis of South Bolivian Quechua and Tarma Quechua. Sociedad Científica de estudiantes de la Carrera de Lingüística e Idiomas, UMSA. 10 January 2025, La Paz, Bolivia. <a href="/me/slides_compounding_in_SBQ_and_TQ_20250110.pdf" target="_blank">[slides]</a> </p>
             <p> Zhong, J. Chinese demonstrative gāi: A linguistic investigation and its pedagogical implications. The 5th International Forum on Linguistics and Chinese Education (IFOLCE-5), 4-7 October 2019, New York, United States. </p>
             <p> Zhong, J. A task-based program for teaching English to children of migrant workers in Beijing. The 8th International Conference on Task-Based Language Teaching. 19-21 August 2019, Ottawa, Canada. </p>        
             <p> Hu, L. & Zhong, J. Discovering the strategies for written corrective feedback in Chinese language teaching: Insights from 3rd year CIB program. The 2019 Annual Conference of the Chinese Language Teachers Association (CLTA), 5-7 April 2019, Seattle, United States. </p>
