--- a/artwork.html
+++ b/artwork.html
@@ -95,12 +95,22 @@
         </section>
                 
         <section class="content-section">   
-            <h2>special series</h2>
-            <h3>sometime, somewhere, someone 某时某地某些人</h3>
+            <h2>special series 01</h2>
+            <h3>partnership 结伴</h3>
             <div class="gallery">
-                <img src="met shades.JPG" alt="colors: tulip"> 
-                <img src="met shades.JPG" alt="colors: tulip">
-                <img src="met shades.JPG" alt="colors: tulip">
+                <img src="a man and a dog-atx-20230105.heic" alt="colors: tulip"> 
+                <img src="a man and a dog-nyc-20221124.heic" alt="colors: tulip">
+                <img src="a man and a dog-nyc-20250620.jpeg" alt="colors: tulip">
+            </div>       
+        </section>
+
+        <section class="content-section">   
+            <h2>special series 02</h2>
+            <h3>people 群人</h3>
+            <div class="gallery">
+                <img src="a man and a dog-atx-20230105.heic" alt="colors: tulip"> 
+                <img src="a man and a dog-nyc-20221124.heic" alt="colors: tulip">
+                <img src="a man and a dog-nyc-20250620.jpeg" alt="colors: tulip">
             </div>       
         </section>
            
