--- a/artwork.html
+++ b/artwork.html
@@ -96,7 +96,7 @@
                 
         <section class="content-section">   
             <h2>special series 01</h2>
-            <h3>partnership 结伴</h3>
+            <h3>A man and a dog</h3>
             <div class="gallery">
                 <img src="a man and a dog-atx-20230105.heic" alt="colors: tulip"> 
                 <img src="a man and a dog-nyc-20221124.heic" alt="colors: tulip">
@@ -106,11 +106,7 @@
 
         <section class="content-section">   
             <h2>special series 02</h2>
-            <h3>people 群人</h3>
-            <div class="gallery">
-                <img src="a man and a dog-atx-20230105.heic" alt="colors: tulip"> 
-                <img src="a man and a dog-nyc-20221124.heic" alt="colors: tulip">
-                <img src="a man and a dog-nyc-20250620.jpeg" alt="colors: tulip">
+            <h3>A study of people </h3>
             </div>       
         </section>
            
