--- a/artwork.html
+++ b/artwork.html
@@ -72,7 +72,7 @@
             <div class="gallery">
                 <img src="motion.HEIC" alt="shade: the MET">   
                 <img src="men.heic" alt="shade: the MET"> 
-                 <img src="men.heic" alt="shade: the MET"> 
+                 <img src="dr-20250811.jpeg" alt="dr"> 
             </div>       
         </section>
            
