--- a/artwork.html
+++ b/artwork.html
@@ -73,6 +73,7 @@
                 <img src="motion.HEIC" alt="shade: the MET">   
                 <img src="men.heic" alt="shade: the MET"> 
                  <img src="dr-20250811.jpeg" alt="dr"> 
+                <img src="nyc-20230802.HEIC" alt="dr"> 
             </div>       
         </section>
            
