--- a/artwork.html
+++ b/artwork.html
@@ -72,6 +72,11 @@
             <div class="gallery">
                 <img src="motion.HEIC" alt="shade: the MET">   
                 <img src="men.heic" alt="shade: the MET"> 
+            </div>       
+        </section>
+
+                <section class="content-section">        
+            <div class="gallery">
                  <img src="dr-20250811.jpeg" alt="dr"> 
                 <img src="nyc-20230802.HEIC" alt="dr"> 
             </div>       
