--- a/artwork.html
+++ b/artwork.html
@@ -30,9 +30,15 @@
         <section class="content-section">   
             <h3>color</h3>
             <div class="gallery">
-                <img src="seattle.JPG" alt="colors: tulip"> 
-                <img src="moonriver.JPG" alt="colors: tulip">            
+                <img src="seattle.JPG" alt="colors: tulip">            
                 <img src="sea.jpg" alt="shade: the MET">  
+            </div>       
+
+        </section>
+                <section class="content-section">   
+            <div class="gallery">
+                <img src="moonriver.JPG" alt="colors: tulip">           
+                <img src="buf-20241006.HEIC" alt="shade: the MET">  
             </div>       
         </section>
 
