--- a/artwork.html
+++ b/artwork.html
@@ -68,7 +68,17 @@
             <h3>A man and a dog</h3>
             <div class="gallery">
                 <img src="a man and a dog-atx-20230105.heic" alt="colors: tulip"> 
+            </div>       
+        </section>
+
+        <section class="content-section">   
+            <div class="gallery">
                 <img src="a man and a dog-nyc-20221124.heic" alt="colors: tulip">
+            </div>       
+        </section>
+              
+        <section class="content-section">   
+            <div class="gallery">
                 <img src="a man and a dog-nyc-20250620.jpeg" alt="colors: tulip">
             </div>       
         </section>
