--- a/artwork.html
+++ b/artwork.html
@@ -101,7 +101,7 @@
 
                 <section class="content-section">        
             <div class="gallery">
-                 <img src="nyc-20230802.HEIC" alt="dr"> 
+                 <img src="nyc-20210828.JPG" alt="dr"> 
                 <img src="nyc-20230802.HEIC" alt="nyc"> 
             </div>       
         </section>
