--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <li><a href="#teaching">Teaching</a></li>
                  <li><a href="#service">Service</a></li>
                 <li><a href="fieldwork.html">Fieldwork</a></li>
+                <li><a href="socialwork.html">Socialwork</a></li>
                 <li><a href="artwork.html">Artwork</a></li> <!-- Correct link to the artwork page -->
             </ul>
         </nav>
@@ -34,7 +35,7 @@
             </p>
             <p> My research interests center around morphosyntax, pragmatics, and typology. Languages I have conducted fieldwork on include Hakka, Balti, Bimoba, Quechua, and Aymara.     
             </p>       
-            <p> I obtained my BA in Teaching Chinese to Speakers of Other Languages from <a href="https://en.bfsu.edu.cn"> Beijing Foreign Studies University</a> and my MA in East Asian Languages and Cultures from <a href="http://ealac.columbia.edu"> Columbia University</a>. Here is my <a href="/me/cv_jz_20250914.pdf" target="_blank">CV</a>. 
+            <p> Prior to joining UB, I received my BA from <a href="https://en.bfsu.edu.cn"> Beijing Foreign Studies University</a> and my MA from <a href="http://ealac.columbia.edu"> Columbia University</a>. Here is my <a href="/me/cv_jz_20250914.pdf" target="_blank">CV</a>. 
             </p>
         </section>
 
