--- a/socialwork.html
+++ b/socialwork.html
@@ -1,1 +1,34 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Socialwork</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+   
+    <header>
+        <h1>Socialwork</h1>
+    </header>  
+   
+    <main>
+
+      <section class="content-section">
+        <h1>CTHH Mentoring program 县城学子互助计划</h1>
+        <p> coming soon </p>
+        </section>
+      
+      <section class="content-section">
+        <h1>Migrant children education 流动儿童教育 </h1>
+        <p> coming soon </p>
+        </section>
+
+    </main>
+
+    <footer>
+        <p>© 2025 Juan Zhong</p>
+    </footer>
+</body>
+</html>
