--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </p>
             <p> My research interests center around morphosyntax, pragmatics, and language documentation. Languages I have conducted fieldwork on include Hakka, Balti, Bimoba, Quechua, and Aymara.     
             </p>       
-            <p> Prior to joining UB, I received my BA from <a href="https://en.bfsu.edu.cn"> Beijing Foreign Studies University</a> and my MA from <a href="http://ealac.columbia.edu"> Columbia University</a>. Here is my <a href="/me/cv_jz_20250914.pdf" target="_blank">CV</a>. 
+            <p> Prior to joining UB, I received my BA from <a href="https://en.bfsu.edu.cn"> Beijing Foreign Studies University</a> and my MA from <a href="http://ealac.columbia.edu"> Columbia University</a>. Here is my <a href="/me/cv_jz_20251003pages.pdf" target="_blank">CV</a>. 
             </p>
         </section>
 
