--- a/art.html
+++ b/art.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Artwork</title>
+    <title>Art</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
    
     <header>
-        <h1>Artwork</h1>
+        <h1>Art</h1>
     </header>  
    
     <section class="content-section">
-        <h2>photography</h2>
+        <h2>Photography</h2>
         <p> My photography examines how lights, shades, and shapes interact and integrate, through which moods transmit and transform.
         </p>
 
@@ -107,14 +107,15 @@
             </div>       
         </section>
            
-        <section class="content-section">
-            <h2>calligraphy</h2>
-            <p> coming soon </p>
-        </section>
     
         <section class="content-section">
-            <h2>painting</h2>
+            <h2>Painting</h2>
             <h3>A typology of color</h3>
+            <p> coming soon </p>
+        </section>
+
+        <section class="content-section">
+            <h2>Calligraphy</h2>
             <p> coming soon </p>
         </section>
 
