--- a/socialwork.html
+++ b/socialwork.html
@@ -4,25 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Socialwork</title>
+    <title>Community</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
    
     <header>
-        <h1>Socialwork</h1>
+        <h1>Community</h1>
     </header>  
    
     <main>
 
       <section class="content-section">
-        <h2>CTHH Mentoring program 县城学子互助计划</h2>
-        <p> coming soon </p>
+        <h2>Community program for students from underdeveloped counties 县城学子互助计划</h2>
+          <p> In 2020, I collebrated with a group of friends from Anyuan and initiated a community-based program to share our experiences and perspectives with younger Anyuan people in high schools and colleges. The vision of this program is to foster a community where peers from underdeveloped towns in China help each other. We run a mentoring for growth plan (CTHH) twice a year (every summer and winter break) and a drop-in chatting room (OHOH) weekly during fall semesters. </p>
+          <p> In CTHH, people voluntarily sign up as mentors and mentees and are grouped into pairs based on shared backgrounds and interests. Each pair has a 60-90 minute online conversation where the mentor shares their individual experiences and stories with the mentee who have questions regarding study, work, or life. </p> 
+          <p> In OHOH, members from the CTHH plan freely join in the weekly online chatting room hosted by a regular mentor and have conversations about their questionsa and interests. </p>
+          <p> By 2025, we have run 11 cycles of CTHH (2020-2025) and three cycles of OHOH (2022-2025), In addition, We also organized two special summer gatherings (2022 & 2023) where we had theme-based dicussions by community members and talks by invited guests.</p> 
+          
         </section>
       
       <section class="content-section">
         <h2>Migrant children education 流动儿童教育 </h2>
-        <p> coming soon </p>
+        <p>coming soon</p>
         </section>
 
     </main>
