--- a/community.html
+++ b/community.html
@@ -17,10 +17,10 @@
 
       <section class="content-section">
         <h2>Community program for students from underdeveloped counties 县城学子互助计划</h2>
-          <p> In 2020, I collebrated with a group of friends from Anyuan and initiated a community-based program to share our experiences and perspectives with younger Anyuan people in high schools and colleges. The vision of this program is to foster a community where peers from underdeveloped towns in China help each other. We run a mentoring for growth plan (CTHH) twice a year (every summer and winter break) and a drop-in chatting room (OHOH) weekly during fall semesters. </p>
-          <p> In CTHH, people voluntarily sign up as mentors and mentees and are grouped into pairs based on shared backgrounds and interests. Each pair has a 60-90 minute online conversation where the mentor shares their individual experiences and stories with the mentee who have questions regarding study, work, or life. </p> 
-          <p> In OHOH, members from the CTHH plan freely join in the weekly online chatting room hosted by a regular mentor and have conversations about their questionsa and interests. </p>
-          <p> By 2025, we have run 11 cycles of CTHH (2020-2025) and three cycles of OHOH (2022-2025), In addition, We also organized two special summer gatherings (2022 & 2023) where we had theme-based dicussions by community members and talks by invited guests.</p> 
+          <p> In 2020, I collaborated with peers from Anyuan to establish a community-based program dedicated to helping young people from underdeveloped counties in China. The program aims to foster a supportive peer network where members share experiences, exchange perspectives, and empower one another through mutual learning and mentorship. We operate two main initiatives: the Mentoring for Growth (CTHH) plan, held twice annually during summer and winter breaks, and the Drop-in Chat Room (OHOH), held weekly during the fall semester. </p>
+          <p> In CTHH, people voluntarily sign up as mentors or mentees and are matched in pairs based on shared backgrounds and interests. Each pair engages in a 60–90 minute online conversation, during which mentors share personal stories and advice, while mentees bring questions about study, work, or life.</p> 
+          <p> In OHOH, members from the CTHH plan freely join in the weekly online chatting room hosted by regular mentors and have conversations about their questionsa and interests in an informal, supportive environment. </p>
+          <p> By 2025, we have successfully completed 11 rounds of CTHH (2020–2025) and three rounds of OHOH (2022–2025).Additionally, we organized two special summer gatherings (2022 and 2023) featuring thematic discussions and invited guest talks that strengthened community engagement.</p> 
           
         </section>
       
