Fix date formatting in guest instructor section

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <p>First Year Chinese II (2022 Spring) and Third Year Chinese N (2021 Fall), Department of East Asian Languages and Cultures, Columbia University.</p>  
 
             <h3>Guest Instructor</h3>
-            <p>Languages in East Asia (October, 15), Languages of the World instructed by Gladys Camacho-Rios (2025 Fall), Department of Linguistics, University at Buffalo, SUNY. </p>
+            <p>Languages in East Asia (October 15), Languages of the World instructed by Gladys Camacho-Rios (2025 Fall), Department of Linguistics, University at Buffalo, SUNY. </p>
             
             <h3>Teaching Assistant</h3>
             <p>Language, Society, and the Individual instructed by Brian Hayden (2024 Spring), Department of Linguistics, University at Buffalo, SUNY. </p>
