--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </p>
             <p> My research interests center around morphosyntax, pragmatics, and language documentation. Languages I have conducted fieldwork on include Hakka, Balti, Bimoba, Quechua, and Aymara.     
             </p>       
-            <p> Prior to joining UB, I received my BA from <a href="https://en.bfsu.edu.cn"> Beijing Foreign Studies University</a> and my MA from <a href="http://ealac.columbia.edu"> Columbia University</a>. Here is my <a href="/me/cv_jz_20251003pages.pdf" target="_blank">CV</a>. 
+            <p> Prior to joining UB, I received my BA from <a href="https://en.bfsu.edu.cn"> Beijing Foreign Studies University</a> and my MA from <a href="http://ealac.columbia.edu"> Columbia University</a>. Here is my <a href="/me/cv_jz_20260206pages.pdf" target="_blank">CV</a>. 
             </p>
         </section>
 
@@ -91,9 +91,9 @@
 
         <section id="lingwork" class="content-section">
             <h2>Presentations</h2>
-            <p> Zhong, J. & Camacho-Rios, G. Explaining accusative case marking on locative arguments in South Bolivian Quechua. The 2026 LSA Annual Meeting, 8-11 January 2026, New Orleans, United States. <a href="/me/Zhong_ and_CamachoRios_LSA2026.pdf" target="_blank">[slides]</a>
+            <p> Zhong, J. & Camacho-Rios, G. Explaining accusative case marking on locative arguments in South Bolivian Quechua. The 2026 LSA Annual Meeting, 8-11 January 2026, New Orleans, United States. </p>
             <p> Akobundu, U., Baiz, J., Camacho-Rios, G., Lin, X., Silvestre-Cruz, N., Spies, S., Townes, G., & Zhong, J. Complex Consonant Clusters in the Morphotactics of Southern Bolivian Aymara Verbs. Second Annual Meeting of Phonetics/Phonology in Upstate New York (PHUNY 2), 3 May 2025, Buffalo, United States. </p>
-            <p> Zhong, J. Nominal compounding: A comparative analysis of South Bolivian Quechua and Tarma Quechua. Sociedad Científica de estudiantes de la Carrera de Lingüística e Idiomas, UMSA. 10 January 2025, La Paz, Bolivia. <a href="/me/slides_compounding_in_SBQ_and_TQ_20250110.pdf" target="_blank">[slides]</a> </p>
+            <p> Zhong, J. Nominal compounding: A comparative analysis of South Bolivian Quechua and Tarma Quechua. Sociedad Científica de estudiantes de la Carrera de Lingüística e Idiomas, UMSA. 10 January 2025, La Paz, Bolivia.  </p>
             <p> Zhong, J. Chinese demonstrative gāi: A linguistic investigation and its pedagogical implications. The 5th International Forum on Linguistics and Chinese Education (IFOLCE-5), 4-7 October 2019, New York, United States. </p>
             <p> Zhong, J. A task-based program for teaching English to children of migrant workers in Beijing. The 8th International Conference on Task-Based Language Teaching. 19-21 August 2019, Ottawa, Canada. </p>        
             <p> Hu, L. & Zhong, J. Discovering the strategies for written corrective feedback in Chinese language teaching: Insights from 3rd year CIB program. The 2019 Annual Conference of the Chinese Language Teachers Association (CLTA), 5-7 April 2019, Seattle, United States. </p>
